refactor: remove dead code and irrelevant comments
- Cleaned up AdminService (dead constructors, comments)
- Cleaned up App.java (commented-out legacy code)
- Cleaned up repositories (commented-out blocks)